apps/home-assistant/service.yaml
---
# Source: home-assistant/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    name: home-assistant
