apps/home-assistant/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant-frontend
  namespace: home-assistant
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - kind: Rule
    match: Host(`ha.codecorrupt.com`)
    services:
    - kind: Service
      name: home-assistant
      namespace: home-assistant
      port: 80
  tls:
    certResolver: letsencrypt
